[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/UI/esc_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/settings_menu.tscn" type="PackedScene" id=2]

[node name="EscMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.74 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -74.5
margin_right = 41.5
margin_bottom = 74.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 35 )

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 83.0
margin_bottom = 77.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Resume"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 83.0
margin_bottom = 101.0
text = "Save Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 83.0
margin_bottom = 125.0
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 83.0
margin_bottom = 149.0
focus_neighbour_bottom = NodePath("../ResumeButton")
text = "Quit Game"

[node name="Menus" type="Node" parent="."]

[node name="SettingsMenu" parent="Menus" instance=ExtResource( 2 )]

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
